[package]
name = "outbox-relay"
version = "0.1.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Relay events from an outbox table to kafka"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "outbox"]
categories = ["command-line-utilities", "database"]

[dependencies]
bb8-postgres = { version = "0.7", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.0", features = ["derive"] }
futures = "0.3"
rdkafka = "0.28"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.13", features = [
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
